--- a/client/src/components/LandingPage/Page.css
+++ b/client/src/components/LandingPage/Page.css
@@ -49,9 +49,12 @@
   flex-basis: 100% !important;
 }
 .cartMini {
-    display: none;
-  }
+  display: none;
+}
 @media (max-width: 1024px) {
+  .dropdown-menu {
+    display: block !important;
+  }
   .cartMini {
     display: block;
   }
@@ -62,8 +65,6 @@
     display: none !important;
   }
   .mini-items {
-    display: none !important;
-
     flex-direction: row;
     flex-grow: 1;
     order: 1;
