--- a/client/src/components/LandingPage/Page.css
+++ b/client/src/components/LandingPage/Page.css
@@ -35,7 +35,9 @@
 .media.align-items-lg-center.flex-column {
   width: 100% !important;
 }
-
+.height6em{
+  height: 6em;
+}
 .mini-items {
   display: flex;
   order: 2;
@@ -97,11 +99,7 @@ ol.carousel-indicators li.active {
   padding: 0 !important;
   border: none !important;
 }
-.dropdown-item {
-  padding: 2px 20px !important;
-  border-radius: 0 !important;
-  border-bottom: 1px solid rgb(216, 216, 216) !important;
-}
+
 .carousel-control-prev {
 }
 .carousel-control-prev-icon {
@@ -127,6 +125,14 @@ ol.carousel-indicators li.active {
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
   filter: invert(1);
+}
+
+.vat {
+  font-size: 12px;
+  color: gray;
+}
+.contacto {
+  color: white !important;
 }
 @media (max-width: 1024px) {
   .dropdown-menu {
@@ -168,6 +174,22 @@ ol.carousel-indicators li.active {
   background-color: rgba(141, 141, 141, 0.685) !important;
 }
 @media (max-width: 425px) {
+  .navbar-nav.ml-auto.mr-8.justify-content-center {
+    padding: 0 !important;
+  }
+  .dropdown-item {
+    padding: 2px 0 !important;
+    border-radius: 0 !important;
+    background-color: #343a40 !important;
+    color: rgb(241, 240, 240) !important;
+    border-bottom: 1px solid rgb(148, 148, 148) !important;
+  }
+  .navbar.navbar-expand-lg.navbar-dark {
+  }
+  .nav-item {
+    margin: 0 !important;
+  }
+
   .flexcolumn-wrapper {
     flex-direction: row;
   }
