--- a/client/src/components/LandingPage/cart.css
+++ b/client/src/components/LandingPage/cart.css
@@ -325,7 +325,7 @@ body {
   text-transform: uppercase;
 }
 
-.text__delivery::after {
+/* .text__delivery::after {
   content: "";
   display: block;
   width: 60px;
@@ -333,7 +333,7 @@ body {
   height: 4px;
   margin-top: 10px;
   margin-bottom: 10px;
-}
+} */
 
 a {
   text-decoration: none;
