--- a/client/src/components/LandingPage/Page.css
+++ b/client/src/components/LandingPage/Page.css
@@ -64,7 +64,7 @@
 
 ol.carousel-indicators {
   position: absolute;
-  bottom: 5px;
+  bottom: 0px;
   margin: 0;
   left: 0;
   right: 0;
@@ -73,16 +73,15 @@ ol.carousel-indicators {
 
 ol.carousel-indicators li,
 ol.carousel-indicators li.active {
-  width: 2rem;
-  height: 0.3rem;
-  margin: 0;
+  width: 2.5rem;
+  height: 0.25rem;
   border: 0;
   background: transparent;
 }
 .quantity {
+  display: block !important;
   width: 140px;
   text-align: center;
-  height: 2em;
 }
 ol.carousel-indicators li {
   background: rgba(19, 19, 19, 0.39);
@@ -109,9 +108,8 @@ ol.carousel-indicators li.active {
   margin-top: 8em !important;
 }
 .slider__section {
-  width: 100%;
   display: flex;
-  padding-bottom: 1em;
+  width: 100%;
 }
 .adding {
   display: flex;
