--- a/client/src/components/LandingPage/Page.css
+++ b/client/src/components/LandingPage/Page.css
@@ -12,7 +12,7 @@
 .shoppingCart {
 }
 .productSiteWrapper {
-  background: #555 !important;
+  background: #343a40 !important;
 }
 .navbar-nav > li {
   margin-left: 20px;
@@ -30,12 +30,12 @@
   flex-grow: 1;
   justify-content: center;
   align-items: center;
-  padding: 5em;
+  padding: 2em;
 }
 .media.align-items-lg-center.flex-column {
   width: 100% !important;
 }
-.height6em{
+.height6em {
   height: 6em;
 }
 .mini-items {
@@ -171,16 +171,26 @@ ol.carousel-indicators li.active {
 .list-group-item.list-group-item-action:hover {
   background-color: rgba(141, 141, 141, 0.685) !important;
 }
+.modale button {
+  background-color: white;
+  border: 1px solid rgb(156, 156, 156);
+  padding: 5px 14px;
+}
 @media (max-width: 425px) {
   .navbar-nav.ml-auto.mr-8.justify-content-center {
     padding: 0 !important;
   }
+  .modale {
+    padding: 0.5em !important;
+    text-align: center;
+  }
+
   .dropdown-item {
-    padding: 2px 0 !important;
+    padding: 2px 1em !important;
     border-radius: 0 !important;
     background-color: #343a40 !important;
     color: rgb(241, 240, 240) !important;
-    border-bottom: 1px solid rgb(148, 148, 148) !important;
+    border-top: 1px solid rgba(148, 148, 148, 0.568) !important;
   }
   .navbar.navbar-expand-lg.navbar-dark {
   }
@@ -208,4 +218,21 @@ ol.carousel-indicators li.active {
 }
 h5 {
   font-size: 14px !important;
+}
+.container-popup {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.imgpopup {
+  max-width: 200px !important;
+}
+.modale {
+  padding: 20px;
+  text-align: center;
+  width: auto;
+}
+
+.popup-content {
+  width: auto !important;
 }
