--- a/client/src/components/LandingPage/cart.css
+++ b/client/src/components/LandingPage/cart.css
@@ -128,7 +128,6 @@ body {
 .orderWrapper {
   /* height: 60vh; */
   /* width: 50vw; */
-  margin: 2vh auto;
 }
 
 .orderHeaderMask {
@@ -210,7 +209,8 @@ body {
 }
 
 .singleProduct__info-des {
-  padding: 0.5vh;
+  flex-basis: 33%;
+  padding: 0.1vh;
   color: rgb(129, 129, 129);
 }
 .singleProduct__name button {
