--- a/client/src/components/LandingPage/Page.css
+++ b/client/src/components/LandingPage/Page.css
@@ -202,7 +202,9 @@ ol.carousel-indicators li.active {
   .nav-item {
     margin: 0 !important;
   }
-
+.container-top{
+  margin-top: 20px;
+}
   .flexcolumn-wrapper {
     flex-direction: row;
   }
