--- a/client/src/components/LandingPage/Page.css
+++ b/client/src/components/LandingPage/Page.css
@@ -18,6 +18,19 @@
   margin-left: 20px;
   margin-right: 20px;
 }
+#quantity{
+  padding: 2px;
+  margin: 0px 10px;
+}
+.popup__img {
+  margin: 10px 4em;
+
+}
+.popup__text{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 
 @media (max-width: 1024px) {
   .menuItem {
@@ -172,9 +185,11 @@ ol.carousel-indicators li.active {
   background-color: rgba(141, 141, 141, 0.685) !important;
 }
 .modale button {
-  background-color: white;
-  border: 1px solid rgb(156, 156, 156);
-  padding: 5px 14px;
+  background-color: rgb(3, 185, 18);
+  border: none;
+  color: white;
+  padding: 5px 11px;
+  margin: 5px;
 }
 @media (max-width: 425px) {
   .navbar-nav.ml-auto.mr-8.justify-content-center {
@@ -194,17 +209,16 @@ ol.carousel-indicators li.active {
   }
   .dropdown-item:nth-child(1) {
     border-top: none !important;
-    margin-top: .5em !important;
-
+    margin-top: 0.5em !important;
   }
   .navbar.navbar-expand-lg.navbar-dark {
   }
   .nav-item {
     margin: 0 !important;
   }
-.container-top{
-  margin-top: 20px;
-}
+  .container-top {
+    margin-top: 20px;
+  }
   .flexcolumn-wrapper {
     flex-direction: row;
   }
