--- a/client/src/components/LandingPage/Admin.css
+++ b/client/src/components/LandingPage/Admin.css
@@ -127,6 +127,13 @@ table th {
   padding: 0.1em 0.5em;
   border: 1px solid gray;
 }
+table{
+
+  overflow-x: auto !important;
+
+
+
+}
 .containterOrders {
   display: flex;
   justify-content: center;
@@ -155,7 +162,7 @@ table th {
 .ahrefff {
   color: black !important;
   text-decoration: none;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 @media (max-width: 425px) {
