--- a/client/src/components/LandingPage/Page.css
+++ b/client/src/components/LandingPage/Page.css
@@ -153,12 +153,19 @@ ol.carousel-indicators li.active {
 }
 .logout .panel__menuItem {
   padding: 0.5em 1em;
-  background-color: rgb(247, 22, 22);
+  background-color: rgba(247, 22, 22, 0.822);
   color: white !important;
-  font-size: 32px;
+  font-size: 18px;
   width: auto;
-  margin-left: 2em;
+  
 }
+
+.logout{
+
+  margin-left: auto;
+  margin-right: 1em;
+}
+
 .vat {
   font-size: 14px;
   color: gray;
