--- a/client/src/components/LandingPage/Page.css
+++ b/client/src/components/LandingPage/Page.css
@@ -18,6 +18,8 @@
   margin-left: 20px;
   margin-right: 20px;
 }
+
+
 #quantity {
   padding: 2px;
   margin: 0px 10px;
@@ -328,4 +330,9 @@ a {
   max-height: 60vh;
   background-color: red;
   overflow-y: scroll;
+}
+
+
+.red2 {
+  background-color: rgba(255, 0, 0, 0.356) !important;
 }
