--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -20,12 +20,12 @@ body,
 #app > div {
   height: 100% !important;
   width: 100% !important;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+  font-size: 14px;
 }
 
 body {
   width: 100vw !important;
-  font-size: 14px;
   line-height: 1.5;
   color: #24292e;
   background-color: #fff;
